platform/minio/service-console.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  namespace: minio
spec:
  selector:
    app: minio
  ports:
    - name: console
      port: 9001
      targetPort: 9001
